# T11-autonomous-warehouse-project

./: MTSP_TEST.par  MTSP_TEST.txt  README.md
B_pathplannings/: README.md  package.xml  send_path.py
B_pathplannings/Phase_3/: main.py  map.py
B_pathplannings/msg/: path.msg
B_pathplannings/turtlebot_astar/: algo.py  distance_matrix.txt  goals1.txt  goals2.txt  main.py  main2.py  map.py  node_maker.py  paths.txt  paths1.txt  utils.py
C_taskallocation/: README.md
C_taskallocation/idk/: CMakeLists.txt  README.md  taskProcessing.py
C_taskallocation/idk/msg/: Tour.msg
C_taskallocation/idk/scripts/: MTSP_TEST_SOLUTION  TSP2.py  taskGeneration.py
R_control/: README.md
R_control/turtlebot_project/src/: paths.txt  turtlebot_control.cpp  turtlebot_control.h
R_controls/src/: main.cpp  turtlebot_control.cpp
R_controls/turtlebot_project/: CMakeLists.txt
R_controls/turtlebot_project/src/: main.cpp  turtlebot_control.cpp  turtlebot_control.h
Y_Mapping/: README.md  cart2_map.pgm  cart2_map.yaml  cart3_map.pgm  cart_map.pgm  cart_map.yaml  extracting.py  extracting_binary.py  final_cart.pgm  final_cart.yaml  map.pgm  map.yaml  occupied_binary_cart.txt  occupied_coordinates_cart.txt  subsampling.py  subsamplingV3.py
idk/: README.md  taskConversion.py
idk/scripts/: TSP1.py  TSP2.py  TSPMain.py  mainTask.py  task1.py  task2.py  taskAllocation.py  taskConversion.py
main/: package.xml
main_ws/: README.md
main_ws/devel/: .catkin  local_setup.sh
main_ws/src/: mainmain.py
turtlebot_project/: package.xml
turtlebot_project/src/: main.cpp
(+79 files in other folders)
