<?xml version="1.0"?>

<package>
    <name> turtlebot_project </name>
    <version> 0.0.1 </version>
    <description> RS2 turtlebot controls </description>

    <maintainer email="Ricardo.Rios@student.uts.edu.au">Ricardo Rios</maintainer>

    <license> MIT </license>

    <buildtool_depend> catkin </buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>roslib</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>tf</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>roslib</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>message_runtime</run_depend>

</package>
